# opamc

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelversion  .gitignore  BUILD.bazel  BUILD.bzl  MODULE.bazel  README.adoc
config/: BUILD.bazel
config/cc/: BUILD.bzl  CONFIG.bzl
config/compilation_mode/: BUILD.bazel
lib/: BUILD.bazel  DEBUG.bzl  cmd_runner.c  opam_config.c
lib/lexer/: BUILD.bazel  opam_lexer.c  opam_lexis.c
lib/lexer/lexis/: BUILD.bazel  opam_lexis.re
lib/parser/: BUILD.bazel  opam_package.c  opam_parser.c  opam_syntaxis.c  opam_syntaxis.y
lib/parser/syntaxis/: BUILD.bazel  opam_syntaxis.y
src/: BUILD.bazel  BUILD.bzl  cmd_runner.c  macros_debug.h  macros_ndebug.h  opam_config.c
src/lexer/: BUILD.bazel  opam_lexer.c  opam_lexis.c  opam_lexis.re
src/parser/: BUILD.bazel  opam_parser.c  opam_syntaxis.y
test/: BUILD.bazel  bazel_test.c  config_test.c  crawl_test.c  lex_test.c  parse_test.c
test/data/: 1.opam
test/unit/: BUILD.bazel
test/unit/lexer/: BUILD.bazel  lex_string_driver.c  lexer_test.c  lexer_test_init.c
test/unit/parser/: BUILD.bazel  parser_test.c  parser_test_init.c
tools/: refresh.sh
