load("@rules_cc//cc:defs.bzl", "cc_library")

load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_DEPS",
     "BASE_COPTS",
     "BASE_DEFINES",
     "BASE_LINKOPTS",
     "define_module_version")

COPTS         = BASE_COPTS
DEPS          = BASE_DEPS
# LINKOPTS      = BASE_LINKOPTS

# exports_files(["macros_debug.h", "macros_ndebug.h",
#                "ansi_colors.h"])
# exports_files(glob(["*.c"], exclude = ["macros_ndebug.h"]))

###########
cc_library(
    name = "opamc",
    srcs = ["opam_config.c", "cmd_runner.c", ":mkhdrs"],
    hdrs = ["include/opamc.h"],
    includes = ["include"],
    # deps = [
    implementation_deps = [
        "//lib/parser:opam_parser",
        "@liblogc//lib:logc",
        "@uthash//lib:uthash",
    ],
    copts = COPTS + [
        "-I$(GENDIR)",
    ],
    defines = BASE_DEFINES + select({
        ## for pselect stuff:
        "@platforms//os:linux": ["_POSIX_C_SOURCE=200809L"],
        "//conditions:default": []
    }) + select({
        "@obazl_tools_cc//profile:dev?": ["PROFILE_dev"],
        "//conditions:default": []
    }),

    local_defines = define_module_version(),
    linkopts = BASE_LINKOPTS,
    visibility = ["//visibility:public"]
)

################################################################
makeheaders(
    name = "mkhdrs",
    outdir = "include",
    hdrs_srcs = [
        "opam_config.c",
        "cmd_runner.c",
        "//lib/parser:opam_parser.c",
        # "//lib/parser:opam_syntaxis.c", ## defines token_type constants
        "//lib/parser:opam_package.c", ## ast node types, etc.
        # "opam_lexer.c",
        # "opam_lexis.c",
    ],
    additional_srcs = [
        "//lib/lexer:opamlexer.h",
        "@liblogc//macros:ansi_colors.h",
    ] + select({
        "@obazl_tools_cc//profile:dev?": [
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
    visibility = ["//visibility:public"]
)

makeheaders(
    name = "mkhdrs_export",
    out = "include/opamc.h",
    export_interface = True,
    hdrs_srcs = [
        "opam_config.c",
        # "//lib/lexer:opam_lexer.c",
        "//lib/parser:opam_parser.c",
        "//lib/parser:opam_package.c",
        # "opam_lexis.c",
        # "opam_syntaxis.c",
        # "//lib/emitters:mkhdrs"
    ],
    visibility = ["//visibility:public"]
)
